@@ -6,18 +6,20 @@ import it.gov.pagopa.mock.dto.CFDTO;
 import it.gov.pagopa.mock.dto.DecryptCfDTO;
 import it.gov.pagopa.mock.dto.EncryptedCfDTO;
 import it.gov.pagopa.mock.dto.Family;
+import it.gov.pagopa.mock.dto.anpr.AnprKoResponseDTO;
 import it.gov.pagopa.mock.dto.anpr.AnprRequestDTO;
 import it.gov.pagopa.mock.dto.anpr.AnprResponseDTO;
 import it.gov.pagopa.mock.dto.anpr.CriteriRicerca;
 import it.gov.pagopa.mock.dto.anpr.DatiSoggetto;
 import it.gov.pagopa.mock.service.family.FamilyMockGeneratorService;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.time.LocalDate;
 import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -28,6 +30,7 @@ class AnprMockFamilyGeneratorServiceImplTest {
 
     public static final String ENCRYPTED_TOKEN = "encrypted-token";
     public static final String PII = "BBBBBB01E07A000A";
+    private static final String FAMILY_ANOMALY_CODE = "FAMILY_ANOMALY";
     @Mock
     private FamilyMockGeneratorService familyMockGeneratorService;
     @Mock
@@ -35,15 +38,23 @@ class AnprMockFamilyGeneratorServiceImplTest {
     @Mock
     private DecryptRestConnector decryptRestConnector;
 
-    @InjectMocks
     private AnprMockFamilyGeneratorServiceImpl service;
+
+    @BeforeEach
+    void setUp() {
+        service = new AnprMockFamilyGeneratorServiceImpl(
+                familyMockGeneratorService,
+                encryptRestConnector,
+                decryptRestConnector,
+                FAMILY_ANOMALY_CODE
+        );
+    }
 
     @Test
     void testGetAnprFamily_whenFamilyExists() {
         // given
-        String cf = PII;
         AnprRequestDTO request = AnprRequestDTO.builder()
-                .criteriRicerca(CriteriRicerca.builder().codiceFiscale(cf).build())
+                .criteriRicerca(CriteriRicerca.builder().codiceFiscale(PII).build())
                 .build();
 
         EncryptedCfDTO encrypted = new EncryptedCfDTO(ENCRYPTED_TOKEN);
@@ -68,9 +79,8 @@ class AnprMockFamilyGeneratorServiceImplTest {
     @Test
     void testGetAnprFamily_whenFamilyDoesNotExist() {
         // given
-        String cf = PII;
         AnprRequestDTO request = AnprRequestDTO.builder()
-                .criteriRicerca(CriteriRicerca.builder().codiceFiscale(cf).build())
+                .criteriRicerca(CriteriRicerca.builder().codiceFiscale(PII).build())
                 .build();
 
         EncryptedCfDTO encrypted = new EncryptedCfDTO(ENCRYPTED_TOKEN);
@@ -85,7 +95,7 @@ class AnprMockFamilyGeneratorServiceImplTest {
         assertThat(response).isNotNull();
         assertThat(response.getListaSoggetti().getDatiSoggetto()).isNotEmpty();
         Assertions.assertEquals(1L,response.getListaSoggetti().getDatiSoggetto().size());
-        DatiSoggetto familyMember = response.getListaSoggetti().getDatiSoggetto().get(0);
+        DatiSoggetto familyMember = response.getListaSoggetti().getDatiSoggetto().getFirst();
         Assertions.assertNotNull(familyMember.getGeneralita());
         String dataNascita = familyMember.getGeneralita().getDataNascita();
         Assertions.assertNotNull(dataNascita);
@@ -97,15 +107,13 @@ class AnprMockFamilyGeneratorServiceImplTest {
     @Test
     void testGenerateFamily_returnsValidResponse() {
         // given
-        String cf = PII;
-
         // when
-        AnprResponseDTO response = service.generateFamily(cf, "ROMA", "00100", "RM", true);
+        AnprResponseDTO response = service.generateFamily(PII, "ROMA", "00100", "RM", true);
 
         // then
         assertThat(response).isNotNull();
         assertThat(response.getListaSoggetti().getDatiSoggetto()).isNotEmpty();
-        DatiSoggetto soggetto = response.getListaSoggetti().getDatiSoggetto().get(0);
+        DatiSoggetto soggetto = response.getListaSoggetti().getDatiSoggetto().getFirst();
         assertThat(soggetto.getGeneralita().getNome()).isNotBlank();
         assertThat(soggetto.getGeneralita().getCognome()).isNotBlank();
         assertThat(soggetto.getGeneralita().getSesso()).isIn("M", "F");
@@ -114,9 +122,8 @@ class AnprMockFamilyGeneratorServiceImplTest {
     @Test
     void testGetAnprFamily_whenFamilyExistsWithChildren() {
         // given
-        String cf = PII;
         AnprRequestDTO request = AnprRequestDTO.builder()
-                .criteriRicerca(CriteriRicerca.builder().codiceFiscale(cf).build())
+                .criteriRicerca(CriteriRicerca.builder().codiceFiscale(PII).build())
                 .build();
 
         EncryptedCfDTO encrypted = new EncryptedCfDTO(ENCRYPTED_TOKEN);
@@ -138,5 +145,43 @@ class AnprMockFamilyGeneratorServiceImplTest {
         assertThat(response.getListaSoggetti().getDatiSoggetto()).hasSize(3);
         verify(encryptRestConnector).upsertToken(any(CFDTO.class));
         verify(familyMockGeneratorService).retrieveFamily(ENCRYPTED_TOKEN);
+    }
+
+    @Test
+    void testRandomBirthDate_whenUserIsOver18() {
+        LocalDate birthDate = LocalDate.parse(AnprMockFamilyGeneratorServiceImpl.randomBirthDate(true));
+
+        assertThat(birthDate).isBeforeOrEqualTo(LocalDate.now().minusYears(18));
+    }
+
+    @Test
+    void testRandomBirthDate_whenUserIsUnder18() {
+        LocalDate birthDate = LocalDate.parse(AnprMockFamilyGeneratorServiceImpl.randomBirthDate(false));
+
+        assertThat(birthDate).isAfterOrEqualTo(LocalDate.now().minusYears(18));
+    }
+
+    @Test
+    void testGetAnprAnomalyFamily_returnsExpectedAnomalyResponse() {
+        AnprResponseDTO response = service.getAnprAnomalyFamily();
+
+        assertThat(response).isNotNull();
+        assertThat(response.getIdOperazioneANPR()).isNotBlank();
+        assertThat(response.getListaAnomalie()).hasSize(1);
+        assertThat(response.getListaAnomalie().getFirst().getCodiceErroreAnomalia()).isEqualTo(FAMILY_ANOMALY_CODE);
+        assertThat(response.getListaAnomalie().getFirst().getTestoErroreAnomalia()).isEqualTo("Anomaly test");
+        assertThat(response.getListaAnomalie().getFirst().getTipoErroreAnomalia()).isEqualTo("A");
+    }
+
+    @Test
+    void testGetAnprAnomalyError_returnsExpectedErrorResponse() {
+        AnprKoResponseDTO response = service.getAnprAnomalyError();
+
+        assertThat(response).isNotNull();
+        assertThat(response.getIdOperazioneANPR()).isNotBlank();
+        assertThat(response.getListaErrori()).hasSize(1);
+        assertThat(response.getListaErrori().getFirst().getCodiceErroreAnomalia()).isEqualTo(FAMILY_ANOMALY_CODE);
+        assertThat(response.getListaErrori().getFirst().getTestoErroreAnomalia()).isEqualTo("Anomaly test");
+        assertThat(response.getListaErrori().getFirst().getTipoErroreAnomalia()).isEqualTo("E");
     }
 }
